--- a/styles/Main.css
+++ b/styles/Main.css
@@ -500,7 +500,7 @@ ul {
 }
 
 body {
-    background: url(https://revanthrawi.github.io/Musicclub/assets/images/bg.jpg) no-repeat center center fixed;
+    background: url(../assets/images/bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
