--- a/artists/styles/skewscroll.css
+++ b/artists/styles/skewscroll.css
@@ -365,7 +365,7 @@ a.navanch:after {
   }
 
   .skw-page-1 .skw-page__half--left .skw-page__content {
-    background-image: url(https://revanthrawi.github.io/Musicclub/artists/Artist_albums/assets/images/AR1.jpg)
+    background-image: url(../Artist_albums/assets/images/AR1.jpg)
   }
 
   .skw-page-1 .skw-page__half--right .skw-page__content {
@@ -377,11 +377,11 @@ a.navanch:after {
   }
 
   .skw-page-2 .skw-page__half--right .skw-page__content {
-    background-image: url(https://revanthrawi.github.io/Musicclub/artists/Artist_albums/assets/images/JB1.jpg)
+    background-image: url(../Artist_albums/assets/images/JB1.jpg)
   }
 
   .skw-page-3 .skw-page__half--left .skw-page__content {
-    background-image: url(https://revanthrawi.github.io/Musicclub/artists/Artist_albums/assets/images/Z1.jpg)
+    background-image: url(../Artist_albums/assets/images/Z1.jpg)
   }
 
   .skw-page-3 .skw-page__half--right .skw-page__content {
@@ -393,11 +393,11 @@ a.navanch:after {
   }
 
   .skw-page-4 .skw-page__half--right .skw-page__content {
-    background-image: url(https://revanthrawi.github.io/Musicclub/artists/Artist_albums/assets/images/LDR1.jpg)
+    background-image: url(../Artist_albums/assets/images/LDR1.jpg)
   }
 
   .skw-page-5 .skw-page__half--left .skw-page__content {
-    background-image: url(https://revanthrawi.github.io/Musicclub/artists/Artist_albums/assets/images/TS1.webp)
+    background-image: url(../Artist_albums/assets/images/TS1.webp)
   }
 
   .skw-page-5 .skw-page__half--right .skw-page__content {
